LayoutTests

Reviewed by Xan Lopez.

        [GTK] Fails new test fast/js/navigator-language.html
        https://bugs.webkit.org/show_bug.cgi?id=30440

        Unskip the test that now passes.

        * platform/gtk/Skipped:
WebCore

        Reviewed by Xan Lopez.

        [GTK] Fails new test fast/js/navigator-language.html
        https://bugs.webkit.org/show_bug.cgi?id=30440

        Reimplement WebCore::defaultLanguage to account for changes in
        locale done by setLocale.

        Already existing test: fast/js/navigator-language.html

        * platform/gtk/Language.cpp:
        (WebCore::defaultLanguage):

Canonical link: https://commits.webkit.org/41686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50244 268f45cc-cd09-0410-ab3c-d52691b4dbfc